# Helldivers-2-AutoCommand_Rust

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  IMPLEMENTATION-PLAN.md  PYTHON-REFERENCE.md  README.md  UI-REFACTOR-STATUS.md  build.rs  installer.iss
src/: compact_view.rs  config.rs  executor.rs  hotkey.rs  icons.rs  main.rs  main_view.rs  plugin.rs  state.rs  stratagems.rs  theme.rs  widgets.rs  wiki_fetcher.rs
src/model/: category.rs  library.rs  mod.rs  plugins.rs  slots.rs  wiki.rs
src/ui/: bottombar.rs  common.rs  detail.rs  grid.rs  library.rs  mod.rs  modals.rs  plugin_creator.rs  topbar.rs
src/ui/modals/: capture.rs  context.rs  library_context.rs  settings.rs  stratagem_settings.rs
