[package]
name = "h2ac-rs"
version = "1.0.0"
edition = "2021"
description = "Helldivers 2 Auto Stratagem Caller — Rust rewrite"

[dependencies]
eframe = "0.31"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
] }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
