[package]
name = "h2ac-rs"
version = "1.0.0"
edition = "2021"
description = "Helldivers 2 Auto Stratagem Caller — Rust rewrite"

[dependencies]
eframe = "0.31"
egui = "0.31"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["tls"] }
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_Foundation",
] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
